--- a/style.css
+++ b/style.css
@@ -8,14 +8,186 @@ html{
 }
 
 body
-{
+{   
+    position: relative;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .clock
 {
-    width: 30rem;
-    height: 40rem;
-    background-color: aqua;
+    width: 50rem;
+    height: 50rem;
+    font-size: 12rem;
+    font-weight: 700;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+
+    color: transparent;
+    background-image: linear-gradient(to right, rgb(0, 238, 255),rgb(155, 155, 17),rgb(255, 0, 0));
+    background-clip: text;
+    -webkit-background-clip: text;
+    animation: animateChangeColor 10s infinite alternate linear;
+    user-select: none;
 }
+@keyframes animateChangeColor
+{
+    from{
+        filter: hue-rotate(0deg);
+    }
+    to
+    {
+        filter: hue-rotate(360deg);
+    }
+}
+.clock .hour
+{
+    display: block;
+}
+
+
+
+
+
+/*  Formmmmmmmmmmmm */
+body #form
+{
+    position: absolute;
+    top: 5rem;
+    width: 15rem;
+    height: 10rem;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+
+    transition: all 2s linear;
+
+}
+
+
+.input-minutes #enter-minutes
+{   
+    width: 12rem;
+    height: 4.5rem;
+    /* background-color: aqua; */
+    font-size: 2rem;
+    padding: 0 2.5rem;
+    outline: none;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 0 15px rgba(0,0,0,.5) ;
+    text-align: center;
+}
+.input-minutes label
+{
+    position: absolute;
+    font-size: 1.8rem;
+    top: -3rem;
+}
+.input-minutes .btn-submit
+{   
+    margin: 1rem;
+    cursor: pointer;
+    padding: 1rem;
+    border: none;
+    letter-spacing: 2px;
+    font-weight: 700;
+    outline: none;
+    user-select: none;
+    box-shadow: 0 0 15px 0 green;
+    border-radius: 10px;
+}
+.input-minutes .btn-submit:hover
+{
+    opacity: .5;
+    color: red;
+}
+
+.display
+{   
+    position: absolute;
+    top: 5rem;
+    width: 28rem;
+    height: 15rem;
+    /* background-color: rebeccapurple; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 15px 5px rgb(18, 170, 21);
+    border-radius: 25px;
+
+    transition: transform 2s linear;
+    transform: translateX(-100rem);
+}
+.display p
+{   
+    position: relative;
+    /* margin-bottom: .5rem; */
+    text-align: center;
+    font-size: 3.2rem;
+    background-image: linear-gradient(to bottom, red,rgb(117, 128, 0),blue);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+.display p span
+{
+    background-image: linear-gradient(to left, rgb(14, 15, 14),rgb(10, 91, 105),rgb(255, 0, 43));
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    animation: animateChangeColor 5s infinite alternate linear;
+    font-weight: 700;
+}
+
+.display .alarm-icon
+{
+    position: absolute;
+    font-size: 3.8rem;
+    color: green;
+    top: 0;
+}
+.display .alarm-icon.active
+{
+    animation: rengreng .5s linear alternate infinite,  zoom 1s ease alternate infinite;
+}
+
+@keyframes rengreng
+{
+    from{
+        transform: rotate(-30deg) scale(1);
+    }
+    to{
+        transform: rotate(30deg) scale(1.8);
+    }
+}
+@keyframes zoom
+{
+    from{
+        filter: hue-rotate(0deg);
+    }
+    to{
+        filter: hue-rotate(360deg);
+      }
+}
+.display button
+{   
+    transform: translateY(1rem);
+    width: 10rem;
+    height: 3.8rem;
+    text-align: center;
+    letter-spacing: 2px;
+    font-weight: 600;
+    border-radius: 5px;
+    box-shadow: 0 0 5px green;
+    transition: transform 1.5s ease;
+}
+
